# Renraku

./: Cargo.toml  README.md
assets/graphs/correct/: trigraph.txt
assets/graphs/incorrect/: dsjc250.5.col.txt
coordinator/: Cargo.toml
coordinator/src/: command.rs  graph.rs  main.rs
node/: Cargo.toml
node/src/: lib.rs
ricart-agrawala/: Cargo.toml
ricart-agrawala/src/: algorithm.rs  main.rs  receiver.rs
shared/: Cargo.toml
shared/src/: lib.rs
