[package]
name = "renraku_coordinator"
description = "A program that allows creation of a distributed system (interconnect them)."
authors = ["VIAL Sébastien"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
bincode = "1.3.3"
clap = { version = "4.4.10", features = ["derive"] }
color-eyre = "0.6.2"
renraku_shared = { path = "../shared" }
serde = { version = "1.0.193", features = ["derive"] }
thiserror = "1.0.50"
