[package]
name = "renraku_node"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
clap = { version = "4.4.10", features = ["derive"] }
color-eyre = "0.6.2"
serde = { version = "1.0.193", features = ["derive"] }
renraku_shared = { path = "../shared" }
