[package]
name = "renraku_ricart_agrawala"
description = "An implementation of Ricart-Agrawala's algorithm using Renraku"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
clap = "4.4.10"
color-eyre = "0.6.2"
serde = { version = "1.0.193", features = ["derive"] }
renraku_shared = { path = "../shared" }
renraku_node = { path = "../node" }
